--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
     <!-- styles -->
     <link rel="stylesheet" href="./fonts/stylesheet.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.6/css/swiper.min.css" />
     <link rel="stylesheet" href="./styles/main.css">
     <link rel="stylesheet" href="./styles/media.css">
     <!-- styles -->
@@ -67,7 +68,73 @@
     </section>
 
     <section class="auto-scroll">
-        <div class="container"></div>
+        <div class="slider">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                    <div class="slider__item"><img src="./img/2-auto-scroll/a-1.png" alt=""></div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="slider__item"><img src="./img/2-auto-scroll/a-2.png" alt=""></div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="slider__item"><img src="./img/2-auto-scroll/a-3.png" alt=""></div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="slider__item"><img src="./img/2-auto-scroll/a-4.png" alt=""></div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="slider__item"><img src="./img/2-auto-scroll/a-5.png" alt=""></div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="slider__item"><img src="./img/2-auto-scroll/a-6.png" alt=""></div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="slider__item"><img src="./img/2-auto-scroll/a-7.png" alt=""></div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="slider__item"><img src="./img/2-auto-scroll/a-8.png" alt=""></div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="slider__item"><img src="./img/2-auto-scroll/a-9.png" alt=""></div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="slider__item"><img src="./img/2-auto-scroll/a-10.png" alt=""></div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="slider__item"><img src="./img/2-auto-scroll/a-11.png" alt=""></div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="slider__item"><img src="./img/2-auto-scroll/a-12.png" alt=""></div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="slider__item"><img src="./img/2-auto-scroll/a-13.png" alt=""></div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="slider__item"><img src="./img/2-auto-scroll/a-14.png" alt=""></div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="slider__item"><img src="./img/2-auto-scroll/a-15.png" alt=""></div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="slider__item"><img src="./img/2-auto-scroll/a-16.png" alt=""></div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="slider__item"><img src="./img/2-auto-scroll/a-17.png" alt=""></div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="slider__item"><img src="./img/2-auto-scroll/a-18.png" alt=""></div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="slider__item"><img src="./img/2-auto-scroll/a-19.png" alt=""></div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="slider__item"><img src="./img/2-auto-scroll/a-20.png" alt=""></div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="slider__item"><img src="./img/2-auto-scroll/a-21.png" alt=""></div>
+                </div>
+            </div>
+        </div>
     </section>
 
     <section class="bull-terrier">
@@ -298,6 +365,7 @@
     </div>
     <!-- modal -->
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.6/js/swiper.min.js"></script>
     <!-- bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"
         integrity="sha384-W8fXfP3gkOKtndU4JGtKDvXbO53Wy8SZCQHczT5FMiiqmQfUpWbYdTil/SxwZgAN"
